--- a/Front-end-code/src/App.css
+++ b/Front-end-code/src/App.css
@@ -1,42 +1,68 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.header {
+  background-color: #fff;
+  color: black;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header h1 {
+  margin: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header button {
+  background-color: transparent;
+  color: black;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header button:hover {
+  text-decoration: underline;
 }
 
-.card {
-  padding: 2em;
+.login-container {
+  margin: 20px auto;
+  width: 700px;
+  padding: 20px;
+  border: none;
 }
 
-.read-the-docs {
-  color: #888;
+.login-container div {
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: calc(100% - 30px);
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+h5 a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+h5 a:hover {
+  text-decoration: underline;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 600px;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.signup{
+  margin-left: 200px;
 }
