--- a/Front-end-code/src/Pages/register/index.css
+++ b/Front-end-code/src/Pages/register/index.css
@@ -1,11 +1,11 @@
 .register h1{
-    font-size: 100px;
-    color: #0c0cce;
+    font-size: 70px;
+    color: #000000;
     margin-bottom: 0.5cm;
 }
 
 .register h2{
-    font-size: 70px;
-    color: #0c0cce;
+    font-size: 40px;
+    color: #000000;
     margin-bottom: 0.5cm;
 }
